#VERSION 0.9.3#

 - updated vendor twitter bootstrap 
 - added a new exception constant in Peak_Controller_Exception 
 - added method dispatchActionParams() and property $actions_with_params in Peak_Controller_Action. This allow us, when activated,
   to call actions with arguments directly and force action url to have those arguments instead of checking them with property
   $params and method params() inside action method. Note that this mode is more strict and force url to contains those params for
   a specific action.
 - fixed an illegal string offset bug in Peak_Core::initConfig() for PHP 5.4
 - added methods addValidateFilter() and addValidateFilters() in Peak_Filters_Advanced
 - added method calculate() in Peak_Model_Pagination
 - added method paging() in Peak_Model_Zendatable to access to Peak_Model_Pagination 
 - added new class Peak_Model_Pagination for Peak_Model_Zendatable
 - added 4 new shorcut method for escaping stuff in Peak_Model_Zendatable

#VERSION 0.9.2#
 
 - added class Peak_Model_Authentication to simplify authentication mechanism with database 
 - fixed method preAction() of Peak_Controller_Internal_PkError due to recent change in Peak_View_Cache
 - modified method __construct() from Peak_Application_Modules to use newly created method in Peak_Application 
 - added 2 methods in Peak_Application to clean up method __construct()
 - removed property $_ctrl_name in Peak_Application_Modules and refactored method prepare()
 - fixed two small bugs in Peak_View_Helper_Debugbar
 - fixed method cleanArray() in Peak_Model_Zendatable to force Zend_db to describe table. This prevents
   issues in some case where method save() is the first interaction with the table and $_metadata are not 
   yet gathered.
 - added new Peak_Exception error constant called. This exception can be raise by Peak_Core::initConfig()
 - added Zend_Db_Profiler infos if enabled to Peak_View_Helper_debugbar