@@ -1,5 +1,6 @@
 #VERSION 0.9.3#
 
+ - updated Peak_Controller_Internal_Pkdoc with new version of twitter bootstrap
  - updated vendor twitter bootstrap 
  - added a new exception constant in Peak_Controller_Exception 
  - added method dispatchActionParams() and property $actions_with_params in Peak_Controller_Action. This allow us, when activated,
